--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.10.0",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
