--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "emoji-dictionary": "^1.0.11",
     "emoji-picker-react": "^4.9.2",
     "firebase": "^10.10.0",
     "moment": "^2.30.1",
