--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -18,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "emoji-dictionary": "^1.0.11",
+    "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.9.2",
     "firebase": "^10.10.0",
     "moment": "^2.30.1",
