--- a/package.json
+++ b/package.json
@@ -46,10 +46,16 @@
     "@types/react-dom": "^18",
     "@types/react-text-truncate": "^0.14.4",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.6.0",
     "postcss": "^8",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^7.13.1"
   }
 }
